dashboard_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: tekton-dashboard
  namespace: tekton-pipelines
spec: 
  rules: 
    - 
      host: tekton.chennaidev-26.tatacommunications.com
      http: 
        paths: 
          - 
            backend: 
              service: 
                name: tekton-dashboard
                port: 
                  number: 9097
            pathType: ImplementationSpecific
